tests/fixtures/diagnostics/parser_unexpected_token.diag
error: expected top-level declaration
  --> parser_unexpected_token.veyl:1:1
   |
  1 | }
   | ^
